--- a/public/css/capstone.css
+++ b/public/css/capstone.css
@@ -49,13 +49,19 @@ th.sorting_asc {
 }
 
 .btn.btn-secondary.btn-lg.pull-right.analystbtn {
-    height: 9%;
+    height: 5%;
+    line-height: 0.5;
 }
 
 button.btn.btn-info.btn-lg.pull-right.analystbtn {
-    height: 9%;
+    height: 5%;
+    line-height: 0.5;
 }
 
 .card-header {
     font-size: 16px;
+}
+
+.navbar-brand>img {
+  display: inline;
 }
