Changes for tabs and notification

--- a/public/css/capstone.css
+++ b/public/css/capstone.css
@@ -65,3 +65,15 @@ button.btn.btn-info.btn-lg.pull-right.analystbtn {
 .navbar-brand>img {
   display: inline;
 }
+
+ul.nav.nav-tabs {
+    margin: 10px;
+}
+
+.tab-content {
+    padding: 10px;
+}
+
+.exclamationicon{
+  height: 20px;
+}
